Registration Working Fine

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -31,8 +31,8 @@
             android:paddingStart="20dp"
             android:paddingEnd="15dp"
             android:singleLine="true"
-            android:textColorHighlight="@color/Red"
             android:textColor="@color/colorBlack"
+            android:textColorHighlight="@color/Red"
             android:textColorHint="@color/pureGray" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -73,28 +73,32 @@
         android:id="@+id/tv_output"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/ready_to_code"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/progressbar"
-        app:layout_constraintEnd_toEndOf="@+id/progressbar"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/progressbar"
-        app:layout_constraintTop_toBottomOf="@+id/et_password"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtforget"
+        app:layout_constraintVertical_bias="0.25" />
 
     <ProgressBar
         android:id="@+id/progressbar"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btn_registeruser"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/btn_singin"
-        app:layout_constraintTop_toBottomOf="@+id/et_password"
-        app:layout_constraintVertical_bias="0.972" />
+        app:layout_constraintEnd_toEndOf="@+id/tv_output"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="@+id/tv_output"
+        app:layout_constraintTop_toBottomOf="@+id/tv_output"
+        app:layout_constraintVertical_bias="0.3" />
 
     <Button
         android:id="@+id/btn_singin"
@@ -110,75 +114,80 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_password" />
 
-    <Button
-        android:id="@+id/btn_registeruser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="208dp"
-        android:background="@drawable/btnsignin"
-        android:text="@string/register"
-        android:textColor="@color/BtnBlueRight"
-        android:textStyle="italic"
-        app:layout_constraintBottom_toTopOf="@+id/btn_singoutuser"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+    <!--    <Button-->
+    <!--        android:id="@+id/btn_registeruser"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginEnd="208dp"-->
+    <!--        android:background="@drawable/btnsignin"-->
+    <!--        android:text="@string/register"-->
+    <!--        android:textColor="@color/BtnBlueRight"-->
+    <!--        android:textStyle="italic"-->
+    <!--        app:layout_constraintBottom_toTopOf="@+id/btn_singoutuser"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->
 
     <Button
         android:id="@+id/btn_singoutuser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/btnsignin"
         android:text="@string/sign_out"
         android:textColor="@color/colorBlack"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.472"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progressbar"
+        app:layout_constraintVertical_bias="0.843" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="@string/don_t_have_an_account"
+        android:textColor="@color/colorBlack"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_singin" />
 
     <!--    <Button-->
-<!--        android:id="@+id/sign_Up"-->
-<!--        android:layout_width="71dp"-->
-<!--        android:layout_height="19dp"-->
-<!--        android:layout_marginTop="8dp"-->
-<!--        android:layout_marginEnd="107dp"-->
-<!--        android:background="@drawable/btnsignin"-->
-<!--        android:text="@string/sign_up"-->
-<!--        android:textColor="@color/colorBlack"-->
-<!--        android:textSize="14sp"-->
-<!--        android:textStyle="normal|italic"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.0"-->
-<!--        app:layout_constraintStart_toEndOf="@+id/textView"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/btn_singin" />-->
+    <!--        android:id="@+id/sign_Up"-->
+    <!--        android:layout_width="71dp"-->
+    <!--        android:layout_height="19dp"-->
+    <!--        android:layout_marginTop="8dp"-->
+    <!--        android:layout_marginEnd="107dp"-->
+    <!--        android:background="@drawable/btnsignin"-->
+    <!--        android:text="@string/sign_up"-->
+    <!--        android:textColor="@color/colorBlack"-->
+    <!--        android:textSize="14sp"-->
+    <!--        android:textStyle="normal|italic"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintHorizontal_bias="0.0"-->
+    <!--        app:layout_constraintStart_toEndOf="@+id/textView"-->
+    <!--        app:layout_constraintTop_toBottomOf="@+id/btn_singin" />-->
 
     <TextView
         android:id="@+id/txtsign_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="@string/sign_up"
+        android:textColor="@color/colorBlack"
         android:textSize="14sp"
         android:textStyle="normal|italic"
-        android:textColor="@color/colorBlack"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/btn_singin" />
-
 
 
     <TextView
@@ -218,12 +227,12 @@
         android:id="@+id/txtforget"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="10dp"
         android:text="@string/forget_password"
         android:textColor="@color/colorBlack"
-        app:layout_constraintEnd_toEndOf="parent"
         android:textStyle="italic|normal"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_singin" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
