--- a/app/src/main/res/drawable/btnsignin.xml
+++ b/app/src/main/res/drawable/btnsignin.xml
@@ -3,7 +3,7 @@
 
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorWhite"></solid>
+            <solid android:color="@color/Gray"></solid>
             <corners android:radius="100dp" />
         </shape>
     </item>
