--- a/app/src/main/res/layout/content_register_page.xml
+++ b/app/src/main/res/layout/content_register_page.xml
@@ -10,6 +10,23 @@
     tools:layout_editor_absoluteY="124dp"
     tools:showIn="@layout/activity_register_page">
 
+    <Button
+        android:id="@+id/btn_back"
+        android:layout_width="90dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/btnsignin"
+        android:drawableStart="@mipmap/round_arrow_back_black_24"
+        android:paddingStart="13dp"
+        android:paddingEnd="13dp"
+        android:text="@string/back"
+        android:textAlignment="textEnd"
+        android:textColor="@color/BtnBlueRight"
+        android:textStyle="italic"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/txtwelcome2"
         android:layout_width="169dp"
@@ -75,6 +92,7 @@
         android:layout_marginLeft="32dp"
         android:layout_marginTop="24dp"
         android:layout_marginRight="32dp"
+
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -102,8 +120,6 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="24dp"
-        app:counterEnabled="true"
-        app:counterMaxLength="7"
         android:layout_marginRight="32dp"
         app:passwordToggleEnabled="true"
         app:layout_constraintHorizontal_bias="0.0"
@@ -174,13 +190,14 @@
             android:drawablePadding="10dp"
             android:hint="@string/enter_phone_number"
             android:inputType="phone"
+            android:maxLength="10"
             android:paddingStart="20dp"
             android:paddingEnd="0dp"
 
             android:singleLine="true"
             android:textColor="@color/colorBlack"
             android:textColorHighlight="@color/Red"
-            android:textColorHint="@color/pureGray"/>
+            android:textColorHint="@color/pureGray" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <RadioGroup
