--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,11 +9,8 @@
     <color name="BtnBlueRight">#32D8BC</color>
     <color name="BtnBlueLeft">#32D8A5</color>
     <color name="Gray">#1E000000</color>
-    <color name="pureGray">#FFFFFF</color>
+    <color name="pureGray">#75000000</color>
     <color name="Orange">#E2FF5722</color>
     <color name="Red">#FF3426</color>
-
-
-
 
 </resources>
