--- a/app/src/main/res/layout/row_poi.xml
+++ b/app/src/main/res/layout/row_poi.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="160dp"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="185dp"
     android:layout_height="wrap_content"
-    android:layout_marginStart="30dp"
-    android:layout_marginTop="30dp"
-    android:layout_gravity="center_horizontal">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="5dp"
+    app:cardCornerRadius="10dp"
+    app:strokeColor="@color/Red"
+    app:cardElevation="10dp"
+    app:cardBackgroundColor="@color/colorWhite"
+    android:layout_gravity="center_horizontal"
+    tools:ignore="UnusedAttribute">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,19 +19,22 @@
 
         <ImageView
             android:id="@+id/img_POI"
-            android:layout_width="160dp"
-            android:layout_height="100dp"
+            android:layout_width="190dp"
+            android:layout_height="150dp"
             android:layout_gravity="center_horizontal"
-            android:background="@mipmap/round_arrow_back_black_24" />
+            android:contentDescription="@string/select_POI"
+            android:scaleType="fitXY" />
 
         <TextView
             android:id="@+id/txt_Title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="POI 1"
+            android:layout_gravity="center_horizontal"
             android:padding="10dp"
-            android:layout_gravity="center_horizontal" />
+            android:text="@string/select_POI"
+            android:textAlignment="center"
+            android:textColor="@color/colorBlack"
+            android:textSize="18sp" />
 
 
     </LinearLayout>
