--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,10 @@
     <color name="pureGray">#75000000</color>
     <color name="Orange">#E2FF5722</color>
     <color name="Red">#FF3426</color>
+    <color name="Blue">#0689AD</color>
+    <color name="Yello">#EDA713</color>
+    <color name="Purpal">#4B4CB9</color>
+    <color name="Pink">#D54B9F</color>
+
 
 </resources>
