--- a/app/src/main/res/menu/bottom_navigation_bar.xml
+++ b/app/src/main/res/menu/bottom_navigation_bar.xml
@@ -1,32 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/home"
         android:title="Home"
         android:icon="@drawable/ic_home_black_24dp"
-        app:cnb_iconColor="@color/Purpal"
+        android:iconTint="@color/Blue"
         tools:ignore="HardcodedText" />
     <item
         android:id="@+id/search"
         android:title="Search"
         android:icon="@drawable/ic_search_black_24dp"
-        app:cnb_iconColor="@color/Yello"
+        android:iconTint="@color/Yello"
         tools:ignore="HardcodedText" />
     <item
         android:id="@+id/history"
         android:title="History"
+        android:iconTint="@color/Pink"
         android:icon="@drawable/ic_history_black_24dp"
-        app:cnb_iconColor="@color/Pink"
         tools:ignore="HardcodedText" />
     <item
         android:id="@+id/profile"
         android:title="Profile"
         android:icon="@drawable/ic_person_outline_black_24dp"
-        app:cnb_iconColor="@color/Blue"
+        android:iconTint="@color/colorPrimaryDark"
         tools:ignore="HardcodedText" />
 
 </menu>
