--- a/app/src/main/res/menu/bottom_navigation_bar.xml
+++ b/app/src/main/res/menu/bottom_navigation_bar.xml
@@ -5,26 +5,30 @@
     <item
         android:id="@+id/home"
         android:title="Home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_home_whik_24dp"
         android:iconTint="@color/Blue"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        tools:targetApi="o" />
     <item
         android:id="@+id/search"
         android:title="Search"
         android:icon="@drawable/ic_search_black_24dp"
         android:iconTint="@color/Yello"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        tools:targetApi="o" />
     <item
         android:id="@+id/history"
         android:title="History"
         android:iconTint="@color/Pink"
         android:icon="@drawable/ic_history_black_24dp"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        tools:targetApi="o" />
     <item
         android:id="@+id/profile"
         android:title="Profile"
         android:icon="@drawable/ic_person_outline_black_24dp"
         android:iconTint="@color/colorPrimaryDark"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        tools:targetApi="o" />
 
 </menu>
