--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -105,7 +105,7 @@
         android:layout_height="55dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/btnsignin"
-        android:text="@string/sing_in"
+        android:text="@string/sign_in"
         android:textColor="@color/BtnBlueRight"
         android:textSize="18sp"
         android:textStyle="italic"
