Device Current Location is Working Fine.

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,24 +18,33 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" >
+        app:layout_constraintVertical_bias="0.0">
 
     </FrameLayout>
 
-    <TextView
-        android:id="@+id/title"
+    <EditText
+        android:id="@+id/input"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/BtnBlueLeft"
-        android:layout_margin="10dp"
-        android:elevation="15dp"
-        android:padding="10dp"
-        android:gravity="center"
-        android:text="@string/sign_in"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="35dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:ems="12"
+        android:paddingStart="20dp"
+        android:hint="Enter the Address"
+        android:background="@drawable/textfeild" android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/imgbtn_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        app:layout_constraintBottom_toBottomOf="@+id/input"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/input"
+        app:layout_constraintTop_toTopOf="@+id/input"
+        map:srcCompat="@drawable/ic_search_white_24dp" />
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
