--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,9 +9,9 @@
     <color name="BtnBlueRight">#32D8BC</color>
     <color name="BtnBlueLeft">#32D8A5</color>
     <color name="Gray">#12000000</color>
-    <color name="pureGray">#75000000</color>
+    <color name="pureGray">#33000000</color>
     <color name="Orange">#E2FF5722</color>
-    <color name="Red">#FF3426</color>
+    <color name="Red">#23F513</color>
     <color name="Blue">#0689AD</color>
     <color name="Yello">#EDA713</color>
     <color name="Purpal">#4B4CB9</color>
