--- a/app/src/main/res/drawable/textfeild.xml
+++ b/app/src/main/res/drawable/textfeild.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_pressed="true">
+
+    <item android:state_focused="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/Gray"></solid>
+            <solid android:color="@color/colorWhite"/>
             <corners android:radius="100dp" />
+            <stroke android:color="@color/BtnBlueLeft" android:width="2dp"/>
+
         </shape>
     </item>
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/Gray"/>
+            <solid android:color="@color/pureGray"/>
             <corners android:radius="100dp" />
-
         </shape>
     </item>
+
+
+
 </selector>
