--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -16,6 +16,7 @@
         android:layout_marginTop="200dp"
         android:layout_marginRight="32dp"
         app:errorEnabled="true"
+        android:textColorHint="@color/colorBlack"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -31,9 +32,7 @@
             android:paddingStart="20dp"
             android:paddingEnd="15dp"
             android:singleLine="true"
-            android:textColor="@color/colorBlack"
-            android:textColorHighlight="@color/Red"
-            android:textColorHint="@color/pureGray" />
+            android:textColor="@color/colorBlack"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -45,6 +44,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginRight="32dp"
         app:errorEnabled="true"
+        android:textColorHint="@color/colorBlack"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/et_email"
