--- a/app/src/main/res/layout/content_register_page.xml
+++ b/app/src/main/res/layout/content_register_page.xml
@@ -13,7 +13,7 @@
     <Button
         android:id="@+id/btn_back"
         android:layout_width="90dp"
-        android:layout_height="50dp"
+        android:layout_height="45dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/btnsignin"
@@ -22,7 +22,7 @@
         android:paddingEnd="13dp"
         android:text="@string/back"
         android:textAlignment="textEnd"
-        android:textColor="@color/BtnBlueRight"
+        android:textColor="@color/colorBlack"
         android:textStyle="italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -193,7 +193,6 @@
             android:maxLength="10"
             android:paddingStart="20dp"
             android:paddingEnd="0dp"
-
             android:singleLine="true"
             android:textColor="@color/colorBlack"
             android:textColorHighlight="@color/Red"
@@ -263,7 +262,7 @@
         android:layout_marginTop="24dp"
         android:background="@drawable/btnsignin"
         android:text="@string/register"
-        android:textColor="@color/BtnBlueRight"
+        android:textColor="@color/BtnBlueLeft"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
