--- a/app/src/main/res/drawable/botton_navigation_box.xml
+++ b/app/src/main/res/drawable/botton_navigation_box.xml
@@ -14,7 +14,6 @@
         android:right="5dp"
         android:top="5dp"
         android:bottom="5dp"/>
-    <stroke
-        android:color="@color/Pink" />
+    <stroke />
 
 </shape>
