--- a/app/src/main/res/drawable/textfield.xml
+++ b/app/src/main/res/drawable/textfield.xml
@@ -13,7 +13,9 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/pureGray"/>
+            <solid android:color="@color/colorWhite"/>
+            <stroke android:color="@color/Gray" android:width="4dp"/>
+
             <corners android:radius="100dp" />
         </shape>
     </item>
