--- a/app/src/main/res/menu/bottom_navigation_bar.xml
+++ b/app/src/main/res/menu/bottom_navigation_bar.xml
@@ -19,7 +19,7 @@
     <item
         android:id="@+id/history"
         android:title="History"
-        android:iconTint="@color/Pink"
+        android:iconTint="@color/colorAccent"
         android:icon="@drawable/ic_history_black_24dp"
         tools:ignore="HardcodedText"
         tools:targetApi="o" />
